--- a/src/components/CatBreedDetail/style.module.css
+++ b/src/components/CatBreedDetail/style.module.css
@@ -8,17 +8,21 @@
 .image_container {
   display: inline-block;
   max-width: 50%;
+  max-height: 100%;
   padding: 10px;
 }
 
 .description_container {
+  background-color: aqua;
   display: inline-block;
   max-width: 50%;
   padding: 10px;
+  font-size: 1.5rem;
 }
 
 .image_container img {
   width: 100%;
+  max-height: 100%;
 }
 
 .atribute_container {
@@ -36,23 +40,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: auto;
+    height: 80vh;
 }
 
 .image_container {
-    max-width: 70%;
-    padding: 0;
+    max-height: 50%;
+    padding: 10px;
 }
 
   .description_container{
-    font-size: 20px;
-    max-width: 100%;
+    font-size: 2.5vw;
+    max-height: 50%;
   }
   
 }
 
 @media screen and (max-width: 450px) {
     .description_container{
-        font-size: 14px;
+        font-size: 13px;
       }
+}
+
+@media screen and (max-width: 400px) {
+  .description_container{
+      font-size: 8px;
+    }
 }
