--- a/src/components/CatBreedDetail/style.module.css
+++ b/src/components/CatBreedDetail/style.module.css
@@ -39,11 +39,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    width: 100%;
 }
 
 .image_container {
     max-height: 50%;
+    max-width: 60%;
     padding: 10px;
 }
 
@@ -51,5 +52,11 @@
     font-size: 2.5vw;
     max-height: 50%;
   }
-  
+
+}
+
+@media screen and (max-width: 767px) {
+  .description_container{
+    font-size: 3.3vw;
+  }
 }
