--- a/src/style.module.css
+++ b/src/style.module.css
@@ -34,6 +34,7 @@ body {
 .cat_breed_detail_container {
     font-size: 25px;
     padding: 20px;
+    
 }
 
 @media screen and (max-width: 600px){
@@ -50,5 +51,11 @@ body {
     .searchbar {
         margin-left: -30px;
         
+    }
+
+    .cat_breed_detail_container {
+        font-size: 25px;
+        padding: 0px;
+        height: 160vw;
     }
 }
